# devops-task-ccp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_local.sh  entrypoint.sh
.github/workflows/: docker-build-test-debug.yml  docker-build-test-release.yml
hello_lib/: CMakeLists.txt
hello_lib/include/: hello.hpp
hello_lib/src/: hello.cpp
hello_lib/tests/: test_get_hello.cpp
hello_main/: CMakeLists.txt
hello_main/src/: main.cpp
scripts/: build_local.sh
